assets/css/home/style.scss
---
#Front End Matter Initialization - Do Not Delete This
---
@import "common.scss";
@import "common-imports/variables.scss";
@import "common-imports/app-nav.scss";
@import "common-imports/app-footer.scss";
@import "common-imports/jquery-video.scss";

@-webkit-keyframes cursor-blink-soft{0%,49%{opacity:1}50%,100%{opacity:0}}
@keyframes cursor-blink-soft{0%,49%{opacity:1}50%,100%{opacity:0}}


.homePage {
  .geometricFixedJumbotron {
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
    background: $black;
  }
  .heroSection {
    z-index: 10;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    .posContainer {
      padding: 100px 20px;
      max-width: 600px;
      h1 {
        font-size: 2.8rem;
        font-weight: 500;
        line-height: 2.7rem;
        color: $white;
      }
      .subText {
        font-size: 1.1rem;
        color: #eee;
        margin-bottom: 30px;
      }
      .terminal {
        border-radius: 10px;
        background: #222;
        max-width: 450px;
        margin: 0 auto 15px;
        .tHeader {
          padding: 10px 15px;
          color: #aaa;
          font-size: 0.8rem;
          border-bottom: 1px solid #444;
        }
        .tBody {
          padding: 12px 15px 14px;
          p {
            margin: 0;
            font-family: $monoFont;
            font-weight: 500;
            font-size: 1.0rem;
            line-height: 1.4rem;
            color: $white;
            letter-spacing: -0.7px;
            .cursor {
              width: 7px;
              height: 15px;
              background: $white;
              display: inline-block;
              vertical-align: middle;
              margin-top: -4px;
              margin-left: 5px;
              animation: cursor-blink-soft 1.2s ease-in-out infinite;
            }
          }
        }
      }
      .buttonContainer {
        display: flex;
        gap: 0 5px;
        max-width: 450px;
        margin: 0 auto;
        .btn-default {
          border: 0;
          border-radius: 10px;
          flex-basis: 50%;
          text-decoration: none;
          color: $white;
          padding: 11px 14px 13px;
          font-size: 0.9rem;
          line-height: 25px;
          font-weight: 500;
          &.npm {
            background: #c0392b;  /* fallback for old browsers */
            background: -webkit-linear-gradient(to right, #8e44ad, #c0392b);  /* Chrome 10-25, Safari 5.1-6 */
            background: linear-gradient(to right, #8e44ad, #c0392b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
          }
          &.git {
            background: #141E30;  /* fallback for old browsers */
            background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
            background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
          }
        }
      }
    }
  }
  .mainInfo {
    .dottedBg {
      background:
      url("https://npm-workbench.github.io/react-create-html-video/assets/images/dotted-pattern.jpg")
      repeat center center;
      background-size: 100px auto;
      opacity: 0.25;
      position: absolute;
      inset: 0;
      z-index: 100;
    }
  }
  .features {
    background: $black;
    z-index: 10;
    .dottedBg {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      z-index: 50;
      background:
      url("https://raw.githubusercontent.com/NPM-Workbench/react-create-html-video/refs/heads/feature/website-dev/assets/images/dotted-pattern.jpg")
      repeat center center;
      background-size: 100px auto;
      opacity: 0.25;
    }
    .container {
      padding: 80px 20px;
      h2 {
        font-size: 2.5rem;
        font-weight: 500;
        line-height: 2.4rem;
        color: $white;
        margin-bottom: 50px;
        .smallText {
          font-family: $monoFont;
          font-size: 0.9rem;
          font-weight: 300;
          font-style: italic;
          display: block;
        }
      }
      .featuresList {
        margin-bottom: 0;
        li {
          border: 1px solid #222;
          padding: 25px 20px;
          display: flex;
          flex-direction: column;
          justify-content: space-between;
          .content {
            margin-bottom: 20px;
            img {
              width: 30px;
              height: auto;
              filter: invert(1);
              display: block;
              margin-bottom: 15px;
            }
            .description {
              display: block;
              color: #999;
              font-size: 1.0rem;
              line-height: 1.5rem;
            }
          }
          .title {
            display: block;
            font-size: 0.9rem;
            font-family: $monoFont;
            font-style: italic;
            color: $white;
            border-top: 1px solid #222;
            padding-top: 20px;
          }
        }
      }
    }
  }
  .integration {
    z-index: 10;
    background: $black;
    padding: 100px 20px;
    .codeEditor {
      margin-top: -150px;
      padding: 0;
      border-radius: 20px;
      overflow: hidden;
      border: 1px solid #333;
      background: #111;
      .header {
        display: flex;
        padding: 20px;
        border-bottom: 1px solid #333;
        .segment {
          flex-basis: 50%;
          color: $white;
          font-size: 0.8rem;
          &:last-child {
            display: none;
          }
          .round {
            width: 12px;
            height: 12px;
            display: inline-block;
            border-radius: 50%;
            vertical-align: middle;
            margin-right: 4px;
            &.red {
              background: red;
            }
            &.yellow {
              background: yellow;
            }
            &.green {
              background: green;
            }
          }
        }
      }
      .body {
        padding: 20px;
        .explorer {
          display: none;
        }
        .codeSection {
          pre {
            font-family: $monoFont;
            font-size: 0.85rem;
            color: $white;
            margin-bottom: 0;
            .cursor {
              width: 7px;
              height: 15px;
              background: $white;
              display: inline-block;
              vertical-align: middle;
              margin-top: -4px;
              margin-left: 2px;
              animation: cursor-blink-soft 1.2s ease-in-out infinite;
            }
            .comment {
              opacity: 0.3;
              &.info {
                display: block;
                margin-top: 30px;
              }
            }
            .purple {
              color: #c084fc;
            }
            .green {
              color: #4ade80;
            }
            .blue {
              color: #60a5fa;
            }
            .orange {
              color: #ffa500;
            }
          }
        }
      }
    }
  }
  .skullSection {
    padding: 100px 20px;
    z-index: 10;
    background: $black;
    .container {
      padding: 0;
      position: relative;
      z-index: 20;
      p {
        font-size: 1.5rem;
        font-family: $headingFont;
        font-weight: 600;
        line-height: 1.8rem;
        color: $white;
        margin-bottom: 0;
      }
    }
    .videoParent {
      opacity: 0.3
    }
  }
}
@media only screen and (min-width: 768px) {
  .homePage {
    .heroSection {
      .posContainer {
        h1 {
          font-size: 4.0rem;
          line-height: 3.7rem;
        }
        p {
          font-size: 1.3rem;
          line-height: 2.0rem;
        }
      }
    }
    .features {
      .container {
        h2 {
          max-width: 700px;
          font-size: 2.6rem;
          line-height: 2.6rem;
        }
        .featuresList {
          display: flex;
          flex-wrap: wrap;
          gap: 5px;
          li {
            flex-basis: calc(50% - 5px);
          }
        }
      }
    }
    .integration {
      .codeEditor {
        .header {
          padding: 20px 40px;
          .segment {
            &:first-child {
              flex-basis: 30%;
            }
            &:last-child {
              flex-basis: 70%;
              display: block;
              text-align: right;
              p {
                word-spacing: -1.5px;
                font-weight: 300;
                font-size: 0.8rem;
                color: #888;
                margin-top: 2px;
                margin-bottom: 0;
              }
            }
          }
        }
        .body {
          padding: 50px 40px 20px;
        }
      }
    }
    .skullSection {
      .container {
        p {
          font-size: 2.3rem;
          line-height: 2.75rem;
        }
      }
    }
  }
}
@media only screen and (min-width: 992px) {
  .homePage {
    .features {
      .container {
        .featuresList {
          li {
            flex-basis: calc(33% - 5px);
            flex-grow: 1;
          }
        }
      }
    }
  }
}
@media only screen and (min-width: 1200px) {
  .homePage {
    .heroSection {
      .posContainer {
        max-width: 700px;
      }
    }
    .features {
      .container {
        padding: 100px 0;
      }
    }
    .integration {
      .codeEditor {
        mask-image: linear-gradient(to top, transparent, rgba(0,0,0,0.8) 5%, rgba(0,0,0,0.8) 89%, transparent);
        -webkit-mask-image: linear-gradient(to top, transparent, rgba(0,0,0,0.8) 5%, rgba(0,0,0,0.8) 89%, transparent);
        .body {
          display: flex;
          .explorer {
            display: block;
            flex-basis: 300px;
            display: flex;
            .iconsList {
              width: 45.5px;
              border-right: 1px solid #222;
              padding-right: 20px;
              ul {
                margin-bottom: 0;
                li {
                  margin-bottom: 25px;
                  &:last-child {
                    margin-bottom: 0;
                  }
                  img {
                    filter: invert(1);
                    width: 100%;
                    height: auto;
                    display: block;
                    opacity: 0.5;
                  }
                }
              }
            }
            .fileSection {
              flex-grow: 1;
              color: $white;
              padding-left: 20px;
              font-size: 0.8rem;
              .folderIcon,
              .codeIcon {
                width: 20px;
                margin-right: 5px;
                margin-top: -4px;
              }
              .folderIcon {
                filter: invert(1);
              }
              .title {
                display: block;
                margin-bottom: 10px;
              }
              .appName {
                display: block;
                margin-bottom: 5px;
                .folderIcon {
                  display: inline-block;
                }
              }
              ul {
                margin-bottom: 0;
                padding-left: 15px;
                li {
                  margin-bottom: 6.5px;
                  &:last-child {
                    margin-bottom: 0;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

